@@ -6,4 +6,7 @@ kubuntu-desktop
 edubuntu-desktop
 xubuntu-desktop
 gobuntu-desktop
-nvidia-glx.*
+# never remove nvidia-glx and friends
+^nvidia-glx$
+^nvidia-glx-new$
+^nvidia-glx-legacy$
