@@ -3,7 +3,8 @@ update-manager (1:0.80) gutsy; urgency=low
   * DistUpgrade/DistUpgradeControler.py:
     - do not log apts debug output to the user in server
       upgrade mode
-  
+  * DistUpgrade/DistUpgradeCache.py,DistUpgradeControler.py:  
+    - detect and workaround upgrade issues with envy
 
  --
 
